Fix table overflowing and adding some styling to the scroll bars

--- a/assets/css/tb.scss
+++ b/assets/css/tb.scss
@@ -336,6 +336,32 @@ blockquote {
 table {
   width: 100%;
   border-collapse: collapse;
+  display: block;
+  overflow-x: auto;
+
+  /* Firefox */
+  scrollbar-width: thin;
+  scrollbar-color: var(--color-neutral-500) var(--color-neutral-300);  /* thumb color, track color */
+}
+
+/* Chrome, Edge, Safari */
+table::-webkit-scrollbar {
+  height: 8px;        /* horizontal scrollbar height */
+  width: 8px;         /* vertical scrollbar width */
+}
+
+table::-webkit-scrollbar-track {
+  background: var(--color-neutral-300);
+  border-radius: 4px;
+}
+
+table::-webkit-scrollbar-thumb {
+  background: var(--color-neutral-500);
+  border-radius: 4px;
+}
+
+table::-webkit-scrollbar-thumb:hover {
+  background: var(--color-neutral-400);   /* darker on hover for feedback */
 }
 
 th,
@@ -845,7 +871,6 @@ h6 code.language-plaintext {
     size: inherit;
     family: $inline_code_font;
   };
-
 }
 
 /* COPY CODE BLOCKS */
@@ -1413,4 +1438,20 @@ div.footnotes {
   .commentbox iframe {
     filter: invert(1) hue-rotate(180deg);
   }
+
+  p code.language-plaintext,
+  li code.language-plaintext,
+  h1 code.language-plaintext,
+  h2 code.language-plaintext,
+  h3 code.language-plaintext,
+  h4 code.language-plaintext,
+  h5 code.language-plaintext,
+  h6 code.language-plaintext {
+    color: var(--code-text-color);
+    font: {
+      size: inherit;
+      family: $inline_code_font;
+    };
+  }
+
 }
